ansible/kubernetes/roles/utilities/templates/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
