ansible/kubernetes/roles/utilities/templates/httproute-authentik.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-httproute
  namespace: authentik
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "authentik.traefik.lc"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: authentik-server
        port: 80
        namespace: authentik
