ansible/kubernetes/roles/utilities/templates/prometheus-httproutes.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "prometheus.traefik.lc"
  rules:
    - filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: authentik-forwardauth
      matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: kube-prometheus-stack-prometheus
        port: 9090
        namespace: monitoring
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "alertmanager.traefik.lc"
  rules:
    - filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: authentik-forwardauth
      matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: kube-prometheus-stack-alertmanager
        port: 9093
        namespace: monitoring
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "grafana.traefik.lc"
  rules:
    - filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: authentik-forwardauth
      matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: kube-prometheus-stack-grafana
        port: 80
        namespace: monitoring
